fix: job card spacing

internal-repo-sha: bc36d69e228ca2c6d5e82f75271679eff2de1c5c

--- a/apps/admin-web/src/pages/Jobs/styles.css
+++ b/apps/admin-web/src/pages/Jobs/styles.css
@@ -43,16 +43,6 @@
   }
 }
 
-.jobQueue {
-  margin-bottom: 60px;
-
-  @media (max-width: 768px) {
-    > div {
-      padding: 0 !important;
-    }
-  }
-}
-
 .jobReport {
 
   .controls {
